[gd_scene load_steps=3 format=2]

[ext_resource path="res://ressources/Guitheme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/LevelSelection.gd" type="Script" id=3]

[node name="LevelSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 532.0
margin_top = 391.0
margin_right = 1387.0
margin_bottom = 689.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 855.0
margin_bottom = 49.0
text = "Select a level"
align = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 855.0
margin_bottom = 215.0
size_flags_stretch_ratio = 0.0
custom_constants/vseparation = 30
custom_constants/hseparation = 30
columns = 3

[node name="Level1_Button" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_right = 265.0
margin_bottom = 53.0
text = " Level 1 "

[node name="Level2_Button" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 295.0
margin_right = 560.0
margin_bottom = 53.0
disabled = true
text = " Level 2 "

[node name="Level3_Button" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 590.0
margin_right = 855.0
margin_bottom = 53.0
disabled = true
text = " Level 3 "

[node name="Level4_Button" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 83.0
margin_right = 265.0
margin_bottom = 136.0
disabled = true
text = " Level 4 "

[node name="Level5_Button" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 295.0
margin_top = 83.0
margin_right = 560.0
margin_bottom = 136.0
disabled = true
text = " Level 5 "

[node name="Level6_Button" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 590.0
margin_top = 83.0
margin_right = 855.0
margin_bottom = 136.0
disabled = true
text = " Level 6 "

[node name="Back_Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 245.0
margin_right = 855.0
margin_bottom = 298.0
text = "Back"

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
show_behind_parent = true
margin_left = 510.0
margin_top = 380.0
margin_right = 1410.0
margin_bottom = 700.0
rect_min_size = Vector2( 900, 320 )
mouse_filter = 2
color = Color( 0.258824, 0.462745, 0.541176, 1 )
